--- a/be/package.json
+++ b/be/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "mongoose": "^6.6.0",
+    "mongoose": "^6.6.0"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.19"
   }
 }
